[tool.poetry]
name = "monkeypox-report"
version = "1.0.0"
description = "Monkeypox data report generator"
authors = ["Global.health maintainers <info@global.health>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
requests = "^2.28.0"
boto3 = "^1.24.5"
inflect = "^5.6.0"
chevron = "^0.14.0"
selenium = "^4.2.0"
PyYAML = "^6.0"
jupyter = "^1.0.0"
plotly = "^5.9.0"
pycountry = "^22.3.5"
geopandas = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
